--- a/Jarvis.vcxproj.filters
+++ b/Jarvis.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="inc\Server.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="inc\Types.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
