--- a/Jarvis.vcxproj
+++ b/Jarvis.vcxproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Server.h" />
+    <ClInclude Include="inc\Types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
