--- a/Jarvis.vcxproj.filters
+++ b/Jarvis.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="main.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\ResponseFactory.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Logger.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Server.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="inc\Types.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\ResponseFactory.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\Logger.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
