--- a/Jarvis.vcxproj.filters
+++ b/Jarvis.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\Logger.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\JSONReader.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Server.h">
@@ -42,6 +45,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="inc\Util.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\JSONReader.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
