--- a/Jarvis.vcxproj
+++ b/Jarvis.vcxproj
@@ -133,7 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\JSONReader.cpp" />
+    <ClCompile Include="src\Router.cpp" />
     <ClCompile Include="src\Logger.cpp" />
     <ClCompile Include="src\ResponseFactory.cpp" />
     <ClCompile Include="main.cpp" />
@@ -145,7 +145,11 @@
     <ClInclude Include="inc\Types.h" />
     <ClInclude Include="inc\ResponseFactory.h" />
     <ClInclude Include="inc\Util.h" />
-    <ClInclude Include="inc\JSONReader.h" />
+    <ClInclude Include="inc\Router.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cfg\contentRoutes.json" />
+    <None Include="cfg\fileRoutes.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
