--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,notepadpp,xcode,c++
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,visualstudiocode,notepadpp,xcode,c++
+# Created by https://www.toptal.com/developers/gitignore/api/c++,xcode,notepadpp,visualstudio,visualstudiocode,cmake
+# Edit at https://www.toptal.com/developers/gitignore?templates=c++,xcode,notepadpp,visualstudio,visualstudiocode,cmake
 
 ### C++ ###
 # Prerequisites
@@ -34,6 +34,23 @@
 *.exe
 *.out
 *.app
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+### CMake Patch ###
+# External projects
+*-prefix/
 
 ### NotepadPP ###
 # Notepad++ backups #
@@ -468,4 +485,4 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,notepadpp,xcode,c++
+# End of https://www.toptal.com/developers/gitignore/api/c++,xcode,notepadpp,visualstudio,visualstudiocode,cmake
