--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+build/.cmake
+
 # Created by https://www.toptal.com/developers/gitignore/api/c++,xcode,notepadpp,visualstudio,visualstudiocode,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,xcode,notepadpp,visualstudio,visualstudiocode,cmake
 
