--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,23 @@
-cmake_minimum_required(VERSION 3.28)
+cmake_minimum_required(VERSION 3.28.1)
 
-project(
-  Jarvis
-  VERSION 0.1
-  LANGUAGES CXX)
+project(Jarvis VERSION 0.1 LANGUAGES CXX)
 
-add_library(Logger src/Logger.cpp inc/Logger.h)
-add_library(ResponseFactory src/ResponseFactory.cpp inc/ResponseFactory.h)
-add_library(Router src/Router.cpp inc/Router.h)
-add_library(Server src/Server.cpp inc/Server.h)
-add_library(Types inc/Types.h)
-add_library(Util inc/Util.h)
+find_package(Boost REQUIRED COMPONENTS system)
 
-add_executable(Jarvis main.cpp)
+if (NOT Boost_FOUND)
+    message(FATAL_ERROR "Boost not found.")
+endif()
 
-target_link_libraries(Jarvis PRIVATE Logger)
-target_link_libraries(Jarvis PRIVATE ResponseFactory)
-target_link_libraries(Jarvis PRIVATE Router)
-target_link_libraries(Jarvis PRIVATE Server)
-target_link_libraries(Jarvis PRIVATE Types)
-target_link_libraries(Jarvis PRIVATE Util)
+set(SOURCES
+    src/Logger.cpp
+    src/ResponseFactory.cpp
+    src/Router.cpp
+    src/Server.cpp
+    main.cpp
+)
+
+add_executable(Jarvis ${SOURCES})
+
+target_compile_features(Jarvis PRIVATE cxx_std_20)
+
+target_include_directories(Jarvis PUBLIC inc ${Boost_INCLUDE_DIRS})
