--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -49,7 +49,7 @@ jobs:
     
     # install dependencies
     - name: boost
-      run: sudo apt-get update && sudo apt-get install -yq libboost1.65-dev
+      run: apt-get update && apt-get install -yq libboost1.65-dev
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
