--- a/Jarvis.vcxproj.filters
+++ b/Jarvis.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="src\Server.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="src\Jarvis.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="src\ResponseFactory.cpp">
