--- a/Jarvis.vcxproj
+++ b/Jarvis.vcxproj
@@ -149,6 +149,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="cfg\fileRoutes.json" />
+    <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
