Link boost/mysql

--- a/Jarvis.vcxproj.filters
+++ b/Jarvis.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\Router.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\Database.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\Server.h">
@@ -54,6 +57,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="inc\Version.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\Database.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
