--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,8 @@ project(Jarvis VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic-errors")
 set(CMAKE_CXX_STANDARD 20)
-target_compile_features(Jarvis PRIVATE cxx_std_20)
 
 set(SOURCES
-    boost_mysql.cpp
     src/Logger.cpp
     src/ResponseFactory.cpp
     src/Router.cpp
@@ -25,6 +23,7 @@ endif()
 
 add_executable(Jarvis ${SOURCES})
 
-target_compile_definitions(Jarvis PRIVATE BOOST_MYSQL_SEPARATE_COMPILATION)
+target_compile_features(Jarvis PRIVATE cxx_std_20)
+target_compile_definitions(Jarvis PRIVATE BOOST_BIND_GLOBAL_PLACEHOLDERS BOOST_MYSQL_SEPARATE_COMPILATION)
 target_include_directories(Jarvis PRIVATE inc ${Boost_INCLUDE_DIRS})
 target_link_libraries(Jarvis PRIVATE Boost::headers Threads::Threads OpenSSL::Crypto OpenSSL::SSL)
