--- a/Jarvis.vcxproj
+++ b/Jarvis.vcxproj
@@ -143,7 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Database.cpp" />
+    <ClCompile Include="src\DB.cpp" />
     <ClCompile Include="src\Router.cpp" />
     <ClCompile Include="src\Logger.cpp" />
     <ClCompile Include="src\ResponseFactory.cpp" />
@@ -151,7 +151,7 @@
     <ClCompile Include="src\Server.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="inc\Database.h" />
+    <ClInclude Include="inc\DB.h" />
     <ClInclude Include="inc\Logger.h" />
     <ClInclude Include="inc\Server.h" />
     <ClInclude Include="inc\Types.h" />
