--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic-errors")
 set(CMAKE_CXX_STANDARD 20)
 
 set(SOURCES
+    src/DB.cpp
+    src/Jarvis.cpp
     src/Logger.cpp
     src/ResponseFactory.cpp
     src/Router.cpp
     src/Server.cpp
-    src/Jarvis.cpp
 )
 
 find_package(Boost REQUIRED COMPONENTS headers)
