--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 build
+.vscode
 
 # Created by https://www.toptal.com/developers/gitignore/api/c++,xcode,notepadpp,visualstudio,visualstudiocode,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,xcode,notepadpp,visualstudio,visualstudiocode,cmake
